# SLTVLP

./: .gitignore  ADVANCED_IMPROVEMENTS.md  ARCHITECTURE.md  CHECKLIST.md  IMPROVEMENTS.md  README.md  SETUP.md  SWEEP_GUIDE.md  pyproject.toml  requirements.txt  sweep_config.yaml
code/: extract_keypoints_core.py  extract_keypoints_parallel.py  extract_siglip_features.py
scripts/: ensemble_decode.py  eval_slt.py  eval_vlp.py  extract_timesformer_features.py  gpu_check.py  sweep_vlp.py  train_slt.py  train_vlp.py
src/: config.py  data.py  models.py
src/phoenix_slt/: config.py
src/phoenix_slt/data/: datasets.py
src/phoenix_slt/models/: modeling.py
src/phoenix_slt/train/: phase1_vlp.py  phase2_slt.py
src/phoenix_slt/utils/: checkpoint.py  ensemble.py
